tree-sitter-rdf12-ntriples/test/corpus/w3c-test-suite-rdf11-ntriples.txt
===============
comment_following_triple
===============
<http://example/s> <http://example/p> <http://example/o> . # comment
<http://example/s> <http://example/p> _:o . # comment
<http://example/s> <http://example/p> "o" . # comment
<http://example/s> <http://example/p> "o"^^<http://example/dt> . # comment
<http://example/s> <http://example/p> "o"@en . # comment
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (BLANK_NODE_LABEL))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      language_tag: (LANGTAG)))
  (comment))

===============
langtagged_string
===============
<http://a.example/s> <http://a.example/p> "chat"@en .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      language_tag: (LANGTAG))))

===============
lantag_with_subtag
===============
<http://example.org/ex#a> <http://example.org/ex#b> "Cheers"@en-UK .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      language_tag: (LANGTAG))))

===============
literal_all_controls
===============
<http://a.example/s> <http://a.example/p> "\u0000\u0001\u0002\u0003\u0004\u0005\u0006\u0007\u0008\t\u000B\u000C\u000E\u000F\u0010\u0011\u0012\u0013\u0014\u0015\u0016\u0017\u0018\u0019\u001A\u001B\u001C\u001D\u001E\u001F" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_all_punctuation
===============
<http://a.example/s> <http://a.example/p> " !\"#$%&():;<=>?@[]^_`{|}~" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_ascii_boundaries
===============
<http://a.example/s> <http://a.example/p> "	&([]" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_false
===============
<http://a.example/s> <http://a.example/p> "false"^^<http://www.w3.org/2001/XMLSchema#boolean> .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF))))

===============
literal
===============
<http://a.example/s> <http://a.example/p> "x" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_true
===============
<http://a.example/s> <http://a.example/p> "true"^^<http://www.w3.org/2001/XMLSchema#boolean> .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF))))

===============
literal_with_2_dquotes
===============
<http://a.example/s> <http://a.example/p> "x\"\"y" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_2_squotes
===============
<http://a.example/s> <http://a.example/p> "x''y" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_BACKSPACE
===============
<http://a.example/s> <http://a.example/p> "\b" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_CARRIAGE_RETURN
===============
<http://a.example/s> <http://a.example/p> "\r" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_CHARACTER_TABULATION
===============
<http://a.example/s> <http://a.example/p> "\t" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_dquote
===============
<http://a.example/s> <http://a.example/p> "x\"y" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_FORM_FEED
===============
<http://a.example/s> <http://a.example/p> "\f" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_LINE_FEED
===============
<http://a.example/s> <http://a.example/p> "\n" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_numeric_escape4
===============
<http://a.example/s> <http://a.example/p> "\u006F" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_numeric_escape8
===============
<http://a.example/s> <http://a.example/p> "\U0000006F" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_REVERSE_SOLIDUS2
===============
<http://example.org/ns#s> <http://example.org/ns#p1> "test-\\" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_REVERSE_SOLIDUS
===============
<http://a.example/s> <http://a.example/p> "\\" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_squote
===============
<http://a.example/s> <http://a.example/p> "x'y" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
literal_with_UTF8_boundaries
===============
<http://a.example/s> <http://a.example/p> "߿ࠀ࿿က쿿퀀퟿�𐀀𿿽񀀀󿿽􀀀􏿽" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
minimal_whitespace
===============
<http://example/s><http://example/p><http://example/o>.
<http://example/s><http://example/p>"Alice".
<http://example/s><http://example/p>_:o.
_:s<http://example/p><http://example/o>.
_:s<http://example/p>"Alice".
_:s<http://example/p>_:bnode1.
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (BLANK_NODE_LABEL))
  (triple
    subject: (BLANK_NODE_LABEL)
    predicate: (IRIREF)
    object: (IRIREF))
  (triple
    subject: (BLANK_NODE_LABEL)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (triple
    subject: (BLANK_NODE_LABEL)
    predicate: (IRIREF)
    object: (BLANK_NODE_LABEL)))

===============
nt-syntax-bad-base-01
:error
===============
@base <http://example/> .
---



===============
nt-syntax-bad-bnode-01
:error
===============
_::a  <http://example/p> <http://example/o> .
---



===============
nt-syntax-bad-bnode-02
:error
===============
_:abc:def  <http://example/p> <http://example/o> .
---



===============
nt-syntax-bad-esc-01
:error
===============
# Bad string escape
<http://example/s> <http://example/p> "a\zb" .
---



===============
nt-syntax-bad-esc-02
:error
===============
# Bad string escape
<http://example/s> <http://example/p> "\uWXYZ" .
---



===============
nt-syntax-bad-esc-03
:error
===============
# Bad string escape
<http://example/s> <http://example/p> "\U0000WXYZ" .
---



===============
nt-syntax-bad-lang-01
:error
===============
# Bad lang tag
<http://example/s> <http://example/p> "string"@1 .
---



===============
nt-syntax-bad-num-01
:error
===============
<http://example/s> <http://example/p> 1 .
---



===============
nt-syntax-bad-num-02
:error
===============
<http://example/s> <http://example/p> 1.0 .
---



===============
nt-syntax-bad-num-03
:error
===============
<http://example/s> <http://example/p> 1.0e0 .
---



===============
nt-syntax-bad-prefix-01
:error
===============
@prefix : <http://example/> .
---



===============
nt-syntax-bad-string-01
:error
===============
<http://example/s> <http://example/p> "abc' .
---



===============
nt-syntax-bad-string-02
:error
===============
<http://example/s> <http://example/p> 1.0 .
---



===============
nt-syntax-bad-string-03
:error
===============
<http://example/s> <http://example/p> 1.0e1 .
---



===============
nt-syntax-bad-string-04
:error
===============
<http://example/s> <http://example/p> '''abc''' .
---



===============
nt-syntax-bad-string-05
:error
===============
<http://example/s> <http://example/p> """abc""" .
---



===============
nt-syntax-bad-string-06
:error
===============
<http://example/s> <http://example/p> "abc .
---



===============
nt-syntax-bad-string-07
:error
===============
<http://example/s> <http://example/p> abc" .
---



===============
nt-syntax-bad-struct-01
:error
===============
<http://example/s> <http://example/p> <http://example/o>, <http://example/o2> .
---



===============
nt-syntax-bad-struct-02
:error
===============
<http://example/s> <http://example/p> <http://example/o>; <http://example/p2>, <http://example/o2> .
---



===============
nt-syntax-bad-uri-01
:error
===============
# Bad IRI : space.
<http://example/ space> <http://example/p> <http://example/o> .
---



===============
nt-syntax-bad-uri-02
:error
===============
# Bad IRI : bad escape
<http://example/\u00ZZ11> <http://example/p> <http://example/o> .
---



===============
nt-syntax-bad-uri-03
:error
===============
# Bad IRI : bad escape
<http://example/\U00ZZ1111> <http://example/p> <http://example/o> .
---



===============
nt-syntax-bad-uri-04
:error
===============
# Bad IRI : character escapes not allowed.
<http://example/\n> <http://example/p> <http://example/o> .
---



===============
nt-syntax-bad-uri-05
:error
===============
# Bad IRI : character escapes not allowed.
<http://example/\/> <http://example/p> <http://example/o> .
---



===============
nt-syntax-bad-uri-06
:error
===============
# No relative IRIs in N-Triples
<s> <http://example/p> <http://example/o> .
---



===============
nt-syntax-bad-uri-07
:error
===============
# No relative IRIs in N-Triples
<http://example/s> <p> <http://example/o> .
---



===============
nt-syntax-bad-uri-08
:error
===============
# No relative IRIs in N-Triples
<http://example/s> <http://example/p> <o> .
---



===============
nt-syntax-bad-uri-09
:error
===============
# No relative IRIs in N-Triples
<http://example/s> <http://example/p> "foo"^^<dt> .
---



===============
nt-syntax-bnode-01
===============
_:a  <http://example/p> <http://example/o> .
---

(ntriplesDoc
  (triple
    subject: (BLANK_NODE_LABEL)
    predicate: (IRIREF)
    object: (IRIREF)))

===============
nt-syntax-bnode-02
===============
<http://example/s> <http://example/p> _:a .
_:a  <http://example/p> <http://example/o> .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (BLANK_NODE_LABEL))
  (triple
    subject: (BLANK_NODE_LABEL)
    predicate: (IRIREF)
    object: (IRIREF)))

===============
nt-syntax-bnode-03
===============
<http://example/s> <http://example/p> _:1a .
_:1a  <http://example/p> <http://example/o> .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (BLANK_NODE_LABEL))
  (triple
    subject: (BLANK_NODE_LABEL)
    predicate: (IRIREF)
    object: (IRIREF)))

===============
nt-syntax-datatypes-01
===============
<http://example/s> <http://example/p> "123"^^<http://www.w3.org/2001/XMLSchema#byte> .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF))))

===============
nt-syntax-datatypes-02
===============
<http://example/s> <http://example/p> "123"^^<http://www.w3.org/2001/XMLSchema#string> .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF))))

===============
nt-syntax-file-01
===============

---

(ntriplesDoc)

===============
nt-syntax-file-02
===============
#Empty file.
---

(ntriplesDoc
  (comment))

===============
nt-syntax-file-03
===============
#One comment, one empty line.
---

(ntriplesDoc
  (comment))

===============
nt-syntax-str-esc-01
===============
<http://example/s> <http://example/p> "a\n" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
nt-syntax-str-esc-02
===============
<http://example/s> <http://example/p> "a\u0020b" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
nt-syntax-str-esc-03
===============
<http://example/s> <http://example/p> "a\U00000020b" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
nt-syntax-string-01
===============
<http://example/s> <http://example/p> "string" .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE))))

===============
nt-syntax-string-02
===============
<http://example/s> <http://example/p> "string"@en .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      language_tag: (LANGTAG))))

===============
nt-syntax-string-03
===============
<http://example/s> <http://example/p> "string"@en-uk .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      language_tag: (LANGTAG))))

===============
nt-syntax-subm-01
===============
#
# Copyright World Wide Web Consortium, (Massachusetts Institute of
# Technology, Institut National de Recherche en Informatique et en
# Automatique, Keio University).
#
# All Rights Reserved.
#
# Please see the full Copyright clause at
# <http://www.w3.org/Consortium/Legal/copyright-software.html>
#
# Test file with a variety of legal N-Triples
#
# Dave Beckett - http://purl.org/net/dajobe/
# 
# $Id: test.nt,v 1.7 2003/10/06 15:52:19 dbeckett2 Exp $
# 
#####################################################################

# comment lines
  	  	   # comment line after whitespace
# empty blank line, then one with spaces and tabs

         	
<http://example.org/resource1> <http://example.org/property> <http://example.org/resource2> .
_:anon <http://example.org/property> <http://example.org/resource2> .
<http://example.org/resource2> <http://example.org/property> _:anon .
# spaces and tabs throughout:
 	 <http://example.org/resource3> 	 <http://example.org/property>	 <http://example.org/resource2> 	.	 

# line ending with CR NL (ASCII 13, ASCII 10)
<http://example.org/resource4> <http://example.org/property> <http://example.org/resource2> .

# 2 statement lines separated by single CR (ASCII 10)
<http://example.org/resource5> <http://example.org/property> <http://example.org/resource2> .
<http://example.org/resource6> <http://example.org/property> <http://example.org/resource2> .


# All literal escapes
<http://example.org/resource7> <http://example.org/property> "simple literal" .
<http://example.org/resource8> <http://example.org/property> "backslash:\\" .
<http://example.org/resource9> <http://example.org/property> "dquote:\"" .
<http://example.org/resource10> <http://example.org/property> "newline:\n" .
<http://example.org/resource11> <http://example.org/property> "return\r" .
<http://example.org/resource12> <http://example.org/property> "tab:\t" .

# Space is optional before final .
<http://example.org/resource13> <http://example.org/property> <http://example.org/resource2>.
<http://example.org/resource14> <http://example.org/property> "x".
<http://example.org/resource15> <http://example.org/property> _:anon.

# \u and \U escapes
# latin small letter e with acute symbol \u00E9 - 3 UTF-8 bytes #xC3 #A9
<http://example.org/resource16> <http://example.org/property> "\u00E9" .
# Euro symbol \u20ac  - 3 UTF-8 bytes #xE2 #x82 #xAC
<http://example.org/resource17> <http://example.org/property> "\u20AC" .
# resource18 test removed
# resource19 test removed
# resource20 test removed

# XML Literals as Datatyped Literals
<http://example.org/resource21> <http://example.org/property> ""^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
<http://example.org/resource22> <http://example.org/property> " "^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
<http://example.org/resource23> <http://example.org/property> "x"^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
<http://example.org/resource23> <http://example.org/property> "\""^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
<http://example.org/resource24> <http://example.org/property> "<a></a>"^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
<http://example.org/resource25> <http://example.org/property> "a <b></b>"^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
<http://example.org/resource26> <http://example.org/property> "a <b></b> c"^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
<http://example.org/resource26> <http://example.org/property> "a\n<b></b>\nc"^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
<http://example.org/resource27> <http://example.org/property> "chat"^^<http://www.w3.org/2000/01/rdf-schema#XMLLiteral> .
# resource28 test removed 2003-08-03
# resource29 test removed 2003-08-03

# Plain literals with languages
<http://example.org/resource30> <http://example.org/property> "chat"@fr .
<http://example.org/resource31> <http://example.org/property> "chat"@en .

# Typed Literals
<http://example.org/resource32> <http://example.org/property> "abc"^^<http://example.org/datatype1> .
# resource33 test removed 2003-08-03
---

(ntriplesDoc
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF))
  (triple
    subject: (BLANK_NODE_LABEL)
    predicate: (IRIREF)
    object: (IRIREF))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (BLANK_NODE_LABEL))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (BLANK_NODE_LABEL))
  (comment)
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)))
  (comment)
  (comment)
  (comment)
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (comment)
  (comment)
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      language_tag: (LANGTAG)))
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      language_tag: (LANGTAG)))
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (literal
      string: (STRING_LITERAL_QUOTE)
      datatype_iri: (IRIREF)))
  (comment))

===============
nt-syntax-uri-01
===============
<http://example/s> <http://example/p> <http://example/o> .
---

(ntriplesDoc
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF)))

===============
nt-syntax-uri-02
===============
# x53 is capital S
<http://example/\u0053> <http://example/p> <http://example/o> .
---

(ntriplesDoc
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF)))

===============
nt-syntax-uri-03
===============
# x53 is capital S
<http://example/\U00000053> <http://example/p> <http://example/o> .
---

(ntriplesDoc
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF)))

===============
nt-syntax-uri-04
===============
# IRI with all chars in it.
<http://example/s> <http://example/p> <scheme:!$%25&'()*+,-./0123456789:/@ABCDEFGHIJKLMNOPQRSTUVWXYZ_abcdefghijklmnopqrstuvwxyz~?#> .
---

(ntriplesDoc
  (comment)
  (triple
    subject: (IRIREF)
    predicate: (IRIREF)
    object: (IRIREF)))
